added ingredients_recipe column

--- a/src/main/resources/templates/add-meal.html
+++ b/src/main/resources/templates/add-meal.html
@@ -23,6 +23,10 @@
         <label for="recipe">Recipe:</label>
         <textarea id="recipe" name="recipe" required></textarea>
     </div>
+    <div>
+        <label for="ingredients_recipe">Recipe:</label>
+        <textarea id="ingredients_recipe" name="ingredients_recipe" required></textarea>
+    </div>
 
     <div>
         <label for="calories">Calories:</label>
